# AviSynth-vsTEdgeMask

./: CHANGELOG.md  CMakeLists.txt  README.md
msvc/: vsTEdgeMask.sln  vsTEdgeMask.vcxproj  vsTEdgeMask.vcxproj.filters
src/: vsTEdgeMask.cpp  vsTEdgeMask.h  vsTEdgeMask.rc  vsTEdgeMask_AVX2.cpp  vsTEdgeMask_AVX512.cpp  vsTEdgeMask_SSE2.cpp
src/VCL2/: vectori128.h  vectori256.h  vectori512s.h
